src/constraints/image_scan_constraint/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyAll
metadata:
  name: deny-all-pods
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    high_severity: 10
    medium_severity: 4
    low_severity: 0
